feat(chat): sửa lỗi chuyển tiếp tệp đính kèm và đồng bộ preview sidebar